[gd_scene load_steps=21 format=3 uid="uid://b20sqxrpc7sei"]

[ext_resource type="Texture2D" uid="uid://bnpwevpnq26fl" path="res://sprites/plant_menu.png" id="1_egp2q"]
[ext_resource type="PackedScene" uid="uid://cuh1yaoty6gvf" path="res://pixel_shader/camera.tscn" id="2_8y0bb"]
[ext_resource type="Script" uid="uid://b2svmituwfk4i" path="res://scripts/plant_room/plant_window/rotate_block.gd" id="3_4t3go"]
[ext_resource type="Texture2D" uid="uid://dfytjd2qgrog7" path="res://sprites/plant_menu/wood_planmenu.png" id="4_05lj3"]
[ext_resource type="Texture2D" uid="uid://doojx73d1sd0r" path="res://sprites/plant_menu/bg_plantmenu.png" id="5_o7elc"]
[ext_resource type="Script" uid="uid://nw4iaevdf216" path="res://scripts/plant_room/plant_window/tools.gd" id="6_m44sr"]
[ext_resource type="Theme" uid="uid://c5hj2gg0bpnnj" path="res://sprites/plant_menu/button_themes/button.tres" id="7_rswos"]
[ext_resource type="Theme" uid="uid://bxj03pbbshigq" path="res://sprites/plant_menu/button_themes/spray.tres" id="8_mbhs4"]
[ext_resource type="Theme" uid="uid://cfkmw81av5jt8" path="res://sprites/plant_menu/button_themes/light.tres" id="9_mycsc"]
[ext_resource type="Script" uid="uid://b3fll7hfmu8t4" path="res://scripts/plant_room/plant_window/plant_description.gd" id="10_5uixt"]
[ext_resource type="FontFile" uid="uid://cvl8arghtgpyj" path="res://fonts/Balsamiq_Sans/BalsamiqSans-BoldItalic.ttf" id="11_bl0pt"]
[ext_resource type="Script" uid="uid://cyilwmt6tl5k8" path="res://scripts/navigation.gd" id="12_deuju"]
[ext_resource type="Script" uid="uid://djrrwin8nn733" path="res://scripts/plant_room/plant_window/slider_menu.gd" id="13_57xuv"]

[sub_resource type="GDScript" id="GDScript_d7kgb"]
script/source = "extends Control

@export var active_plant: Plant
var plant_model;

func _ready():
	update_info()
	
func _process(_delta):
	update_info() #а можно я буду это из таймера как-то делть а...
	
func _on_exit_button_pressed():
	queue_free()
		
func update_info():
	var plant_state = active_plant.plant_state
	#print(\"State \" + str(active_plant.plant_states[plant_state]))
	if ($SubViewportContainer/SubViewport/Plant3D.get_child_count() > 0):
		$SubViewportContainer/SubViewport/Plant3D.remove_child(plant_model)
	plant_model = active_plant.plant_states[plant_state].instantiate()
	if ($SubViewportContainer/SubViewport/Plant3D.get_child_count() == 0):
		$SubViewportContainer/SubViewport/Plant3D.add_child(plant_model)
	
	#print(\"Plant model \" + str(plant_model))
	plant_model.position = Vector3.ZERO
	
	$PlantInfo/SoilHumidityInt.text = \"%0.2f%%\" % active_plant.actual_water_coefficent
	$PlantInfo/LightInt.text = str(active_plant.actual_light_amount)
	$PlantInfo/HumidityInt.text = \"%0.2f%%\" % active_plant.actual_humidity
	$PlantInfo/TemperatureInt.text = str(active_plant.actual_temperature)
	
	$PlantDescription.active_plant = active_plant
	$ToolsButtons.active_plant = active_plant
	$Navigation.active_plant = active_plant
	$SliderMenu.active_plant = active_plant
	
"

[sub_resource type="Environment" id="Environment_yf8wi"]
background_mode = 1
background_color = Color(0.544486, 0.754161, 0.997224, 1)
ambient_light_source = 3
ambient_light_color = Color(0.651183, 0.802953, 0.946444, 1)
ambient_light_sky_contribution = 0.13

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ag2fw"]
emission_shape_scale = Vector3(5, 5, 1)
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(0, -0.15, 0)
scale_max = 3.0
color = Color(1, 0.943333, 0.66, 1)
turbulence_enabled = true
turbulence_noise_strength = 1.5
turbulence_noise_scale = 1.0
turbulence_noise_speed_random = 1.0
turbulence_influence_max = 0.12
turbulence_initial_displacement_min = -6.3
turbulence_initial_displacement_max = 1.49012e-06

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_16yum"]
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_2uaix"]
material = SubResource("StandardMaterial3D_16yum")
radius = 0.01
height = 0.02
radial_segments = 10
rings = 6

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_16yum"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 150.0
gravity = Vector3(0, 10, 0)
color = Color(0.997833, 1, 0.87, 1)
turbulence_enabled = true
turbulence_noise_strength = 9.86
turbulence_noise_scale = 3.602
turbulence_influence_max = 0.233

[sub_resource type="LabelSettings" id="LabelSettings_l4uh7"]
font = ExtResource("11_bl0pt")
font_size = 9
font_color = Color(0.694875, 0.75, 0.3825, 1)

[node name="PlantWindow" type="Control"]
layout_mode = 3
anchors_preset = 0
script = SubResource("GDScript_d7kgb")

[node name="PlantWindowBg" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_right = 321.0
offset_bottom = 181.0
color = Color(0.172833, 0.172833, 0.172833, 0.333333)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 10.0
offset_right = 259.0
offset_bottom = 162.0
texture = ExtResource("1_egp2q")
expand_mode = 3

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 275.0
offset_top = 4.0
offset_right = 300.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 6
text = "Leave
"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 14.0
offset_right = 170.0
offset_bottom = 136.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(120, 122)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_yf8wi")

[node name="Camera" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_8y0bb")]
transform = Transform3D(1, 0, 0, 0, 0.910287, 0.413978, 0, -0.413978, 0.910287, 0.0936612, 3.17298, 4)
size = 5.0

[node name="Plant3D" type="Node3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0993701, 0)
script = ExtResource("3_4t3go")

[node name="Sprite3D" type="Sprite3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -0.00383953, 0.999993, 0, -0.999993, -0.00383953, 0.0274923, -0.84824, -0.0558124)
shaded = true
texture_filter = 0
texture = ExtResource("4_05lj3")

[node name="Sprite3D2" type="Sprite3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0253634, 0.813976, -2.38324)
shaded = true
texture_filter = 0
texture = ExtResource("5_o7elc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.547971, 0.828817, 0.113099, -0.563889, 0.266132, 0.781794, 0.617865, -0.492175, 0.613194, -8.01422, 4.23912, 4.35081)
light_color = Color(1, 0.8905, 0.27, 1)
light_energy = 0.8
shadow_normal_bias = 3.022

[node name="GPUParticles3D" type="GPUParticles3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.333732, 1.25605, -1.79978)
visible = false
amount = 25
lifetime = 5.0
preprocess = 10.0
process_material = SubResource("ParticleProcessMaterial_ag2fw")
draw_pass_1 = SubResource("SphereMesh_2uaix")

[node name="SpotLight3D2" type="SpotLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.305494, -0.743232, -0.595214, 0.91123, 0.0468185, 0.409228, -0.276284, -0.667394, 0.691558, -2.61235, 1.94549, 3.57787)
light_energy = 4.559
light_specular = 0.0
shadow_enabled = true
spot_range = 10.694
spot_angle = 29.51

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.773707, -0.565095, 0.286436, 0.179166, 0.628826, 0.756623, -0.607682, -0.534085, 0.587773, 2.50866, 4.10493, 1.91612)
light_energy = 4.215
light_specular = 0.0
shadow_enabled = true
spot_range = 6.6145
spot_attenuation = 1.48

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-0.050192, 0.99874, 0, -0.99874, -0.050192, 0, 0, 0, 1, -3.18389, 1.64272, 1.36079)
light_color = Color(0.83, 1, 0.966, 1)
light_energy = 0.65
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 1.274
shadow_bias = 0.0
omni_range = 5.229
omni_attenuation = -0.615

[node name="GPUParticles2D" type="GPUParticles2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(59, 64)
amount = 30
lifetime = 10.0
preprocess = 10.0
process_material = SubResource("ParticleProcessMaterial_16yum")

[node name="SpotLight3D3" type="SpotLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-0.169811, 0.539105, -0.824943, 0.00118601, 0.837211, 0.546878, 0.985476, 0.0918874, -0.142807, -4.73927, 1.91825, -1.10438)
shadow_enabled = true
spot_range = 17.444
spot_attenuation = -0.91
spot_angle = 34.35
spot_angle_attenuation = 6.72712

[node name="PlantInfo" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 120.0
offset_right = 321.0
offset_bottom = 160.0
color = Color(0.101961, 0.239216, 0.266667, 0.34902)
metadata/_edit_group_ = true

[node name="SoilHumidity" type="Label" parent="PlantInfo"]
layout_mode = 0
offset_right = 41.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 4
text = "Мокрость кома:"

[node name="SoilHumidityInt" type="Label" parent="PlantInfo"]
layout_mode = 0
offset_left = 34.0
offset_right = 40.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 4
text = "0
"

[node name="Light" type="Label" parent="PlantInfo"]
layout_mode = 0
offset_top = 9.0
offset_right = 41.0
offset_bottom = 15.0
theme_override_font_sizes/font_size = 4
text = "Освещенность:"

[node name="LightInt" type="Label" parent="PlantInfo"]
layout_mode = 0
offset_left = 34.0
offset_top = 9.0
offset_right = 40.0
offset_bottom = 15.0
theme_override_font_sizes/font_size = 4
text = "0
"

[node name="Humidity" type="Label" parent="PlantInfo"]
layout_mode = 0
offset_top = 19.0
offset_right = 41.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 4
text = "Влажность:"

[node name="HumidityInt" type="Label" parent="PlantInfo"]
layout_mode = 0
offset_left = 25.0
offset_top = 19.0
offset_right = 31.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 4
text = "0
"

[node name="Temperature" type="Label" parent="PlantInfo"]
layout_mode = 0
offset_top = 28.0
offset_right = 41.0
offset_bottom = 34.0
theme_override_font_sizes/font_size = 4
text = "Температура:"

[node name="TemperatureInt" type="Label" parent="PlantInfo"]
layout_mode = 0
offset_left = 29.0
offset_top = 28.0
offset_right = 35.0
offset_bottom = 34.0
theme_override_font_sizes/font_size = 4
text = "0
"

[node name="ToolsButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_m44sr")

[node name="WateringCanButton" type="Button" parent="ToolsButtons"]
layout_mode = 0
offset_left = 55.0
offset_top = 135.0
offset_right = 85.0
offset_bottom = 165.0
theme = ExtResource("7_rswos")
theme_override_font_sizes/font_size = 5

[node name="SprayButton" type="Button" parent="ToolsButtons"]
layout_mode = 0
offset_left = 101.0
offset_top = 136.0
offset_right = 126.0
offset_bottom = 161.0
theme = ExtResource("8_mbhs4")
theme_override_font_sizes/font_size = 5

[node name="LightButton" type="Button" parent="ToolsButtons"]
layout_mode = 0
offset_left = 139.0
offset_top = 137.0
offset_right = 164.0
offset_bottom = 162.0
theme = ExtResource("9_mycsc")
theme_override_font_sizes/font_size = 5
text = "
"

[node name="PlantDescription" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("10_5uixt")
plant_description_file = "res://Json/plant_descriptions.json"

[node name="DescButton" type="Button" parent="PlantDescription"]
layout_mode = 0
offset_left = 273.0
offset_top = 41.0
offset_right = 302.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 4
text = "Описание"

[node name="InfoButton" type="Button" parent="PlantDescription"]
layout_mode = 0
offset_left = 273.0
offset_top = 58.0
offset_right = 295.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 5
text = "Инфа"

[node name="PlantName" type="Label" parent="PlantDescription"]
layout_mode = 0
offset_left = 173.0
offset_top = 14.0
offset_right = 270.0
offset_bottom = 41.0
text = "Хлорофитум Хохлатый"
label_settings = SubResource("LabelSettings_l4uh7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Description" type="RichTextLabel" parent="PlantDescription"]
modulate = Color(0.631373, 0.603922, 0.431373, 1)
layout_mode = 0
offset_left = 174.0
offset_top = 42.0
offset_right = 270.0
offset_bottom = 156.0
theme_override_font_sizes/normal_font_size = 5
bbcode_enabled = true
text = "Хлорофитум Хохлатый — это многолетняя вечнозеленая трава. Его линейные, ярко-зеленые листья формируют плотную прикорневую розетку. Соцветие возникает из центра растения и достигает длины до 1 метра. Его отдельные цветки звездчатой формы, белые, диаметров до 2 сантиметров. Хлорофитум является одним из самых популярных комнатных растений во всём мире."

[node name="NextButton" type="Button" parent="PlantDescription"]
layout_mode = 0
offset_left = 257.0
offset_top = 144.0
offset_right = 270.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 5
text = "->"

[node name="PrevButton" type="Button" parent="PlantDescription"]
layout_mode = 0
offset_left = 173.0
offset_top = 144.0
offset_right = 186.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 5
text = "<-"

[node name="PageCount" type="Label" parent="PlantDescription"]
layout_mode = 0
offset_left = 216.0
offset_top = 146.0
offset_right = 255.0
offset_bottom = 191.0
theme_override_colors/font_color = Color(0.631373, 0.603922, 0.431373, 1)
theme_override_font_sizes/font_size = 10
text = "1"

[node name="Navigation" type="Control" parent="."]
anchors_preset = 0
offset_left = 1.0
offset_top = -3.0
offset_right = 41.0
offset_bottom = 37.0
script = ExtResource("12_deuju")

[node name="OnwardButton" type="Button" parent="Navigation"]
layout_mode = 0
offset_left = 275.0
offset_top = 81.0
offset_right = 298.0
offset_bottom = 112.0
text = "->"

[node name="BackButton" type="Button" parent="Navigation"]
layout_mode = 0
offset_left = 22.0
offset_top = 81.0
offset_right = 45.0
offset_bottom = 112.0
text = "<-"

[node name="SliderMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("13_57xuv")

[node name="SliderBG" type="ColorRect" parent="SliderMenu"]
layout_mode = 0
offset_left = 46.0
offset_top = 10.0
offset_right = 273.0
offset_bottom = 162.0
color = Color(0.172833, 0.172833, 0.172833, 0.333333)

[node name="ColorRect2" type="ColorRect" parent="SliderMenu"]
layout_mode = 0
offset_left = 90.0
offset_top = 58.0
offset_right = 235.0
offset_bottom = 115.0
color = Color(0.342875, 0.735886, 0.550254, 1)

[node name="WaterAmountHSlider" type="HSlider" parent="SliderMenu/ColorRect2"]
layout_mode = 0
offset_left = 13.0
offset_top = 20.0
offset_right = 133.0
offset_bottom = 36.0

[node name="PourButton" type="Button" parent="SliderMenu/ColorRect2"]
layout_mode = 0
offset_left = 61.0
offset_top = 36.0
offset_right = 83.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 6
text = "Pour
"

[node name="SliderLabel" type="Label" parent="SliderMenu/ColorRect2"]
layout_mode = 0
offset_left = 54.0
offset_top = 1.0
offset_right = 94.0
offset_bottom = 23.3333
text = "0"
horizontal_alignment = 1

[connection signal="gui_input" from="PlantWindowBg" to="." method="_on_slider_bg_gui_input"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="gui_input" from="SubViewportContainer" to="SubViewportContainer/SubViewport/Plant3D" method="_on_sub_viewport_container_gui_input"]
[connection signal="pressed" from="ToolsButtons/WateringCanButton" to="ToolsButtons" method="_on_watering_can_button_pressed"]
[connection signal="pressed" from="ToolsButtons/SprayButton" to="ToolsButtons" method="_on_spray_button_pressed"]
[connection signal="pressed" from="ToolsButtons/LightButton" to="ToolsButtons" method="_on_light_button_pressed"]
[connection signal="pressed" from="PlantDescription/DescButton" to="PlantDescription" method="_on_desc_button_pressed"]
[connection signal="pressed" from="PlantDescription/InfoButton" to="PlantDescription" method="_on_info_button_pressed"]
[connection signal="pressed" from="PlantDescription/NextButton" to="PlantDescription" method="_on_next_button_pressed"]
[connection signal="pressed" from="PlantDescription/PrevButton" to="PlantDescription" method="_on_prev_button_pressed"]
[connection signal="pressed" from="Navigation/OnwardButton" to="Navigation" method="_on_onward_button_pressed"]
[connection signal="pressed" from="Navigation/BackButton" to="Navigation" method="_on_back_button_pressed"]
[connection signal="gui_input" from="SliderMenu/SliderBG" to="SliderMenu" method="_on_slider_bg_gui_input"]
[connection signal="value_changed" from="SliderMenu/ColorRect2/WaterAmountHSlider" to="SliderMenu" method="_on_water_amount_h_slider_value_changed"]
[connection signal="pressed" from="SliderMenu/ColorRect2/PourButton" to="ToolsButtons" method="_on_pour_button_pressed"]
